--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+itsdangerous==0.24
 Flask==0.10.1
 Flask-Sockets==0.1
 gunicorn==19.4.5
 Jinja2==2.8
+MarkupSafe==0.23
 Werkzeug==0.11.3
 psycopg2==2.6.1
 Quandl==2.8.9
